working on color feature

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -62,8 +62,7 @@ body {
     .message-username {
       flex: 2;
       font-weight: 700;
-/*      color: ;
-*/    }
+    }
 
     .navbar {
       background: #2791d9;
@@ -74,7 +73,6 @@ body {
       position: fixed;
       right: 0;
       top: 0;
-      /*color: white;*/
     }
 
     .navbar .users-counter {
